# cubli

./: .gitignore  CubliStructure.stl  CubliStructure10.stl  CubliWheel.stl  CubliWheel10.stl  README.md  pyproject.toml  smoking_gun.ipynb
