[project]
name = "cubli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.10.8",
    "meshcat",
    "notebook>=7.5.4",
    "numpy>=2.4.3",
    "scipy>=1.17.1",
]

[tool.uv.sources]
meshcat = { git = "https://github.com/meshcat-dev/meshcat-python.git" }
